--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -2,77 +2,82 @@
 
 
 <div class="students index">
-
-  <table class="listing table table-striped" summary="Student list">
-    <caption>
-      <h2>Students (<%= @students.size %> found) </h2>     
-    </caption>
-    <tr class="header">
-      <th>B#</th>
-      <th>First Name</th>
-      <th>Middle Name</th>
-      <th>Last Name</th>
-      <th>Program Status</th>
-    </tr>
-    <% @students.each do |student| %>
-
-
-
-    	  <td><%= student.Bnum %></td>
-    	  <td><%= student.FirstName %> <%= student.PreferredFirst.present? ? "(#{student.PreferredFirst})" : nil %></td>
-    	  <td><%= student.MiddleName %></td>
-    	  <td><%= student.LastName %> <%= student.PrevLast.present? ? "(#{student.PrevLast})" : nil %></td>
-    	  <td><%= student.ProgStatus %></td>
-        <td class="actions">
-
-            <% if can? :show, Student %>
-              <%= link_to student_path(student.AltID), :class => "btn btn-info action-small" do %>
-                    </br><span class="small-btn-text">Details</span>
-              <% end %>
-            <% end  %>
-
-
-              <!-- TODO grayed out button if no praxis results, issues -->
-              <% if can? :read, PraxisResult %>
-                <%= link_to student_praxis_results_path(student.AltID),:class => "btn btn-info action-small praxis" + (student.praxis_results.size > 0 ? "" : " disabled") do %>
-                        </br>
-                        <span class="small-btn-text"> Praxis Results 
-                          <span class="badge">
-                            <%=student.praxis_results.size%> 
-                          </span>
-                      </span>
-
-                <% end %>
-              <% end %>
-
-            <% if can? :read, Issue %>
-              <%= link_to student_issues_path(student.AltID),:class => "btn btn-info action-small issues" do %>
-                    </br><span class="small-btn-text">
-                    Issues
-                      <span class="badge">
-                        <%=student.issues.size%>
-                      </span>
-                    </span>
-
-              <% end %>
-            <% end  %>
-
-            <% if can? :read, StudentFile %>
-              <%= link_to student_student_files_path(student.AltID),:class => "btn btn-info action-small issues" do %>
-                    </br><span class="small-btn-text">
-                    Files
-                      <span class="badge">
-                        <%=student.student_files.active.size%>
-                      </span>
-                    </span>
-
-              <% end %>
-            <% end %>
-
-
-        </td>
-      </tr>
+  
+    <div class="container">
+      <table class="listing table table-striped" summary="Student list">
+        <div class="row">          
+          <caption>
+            <div class="header1 col-xs-12">Students</div></br>
+            <div class="header2 col-xs-12"><%= @students.size %> found</div></br>     
+          </caption>
+        </div>
+          <tr class="header">
+            <th>B#</th>
+            <th>First Name</th>
+            <th>Middle Name</th>
+            <th>Last Name</th>
+            <th>Program Status</th>
+          </tr>
+          <% @students.each do |student| %>
     
-    <% end %>
-  </table>
+    
+    
+              <td><%= student.Bnum %></td>
+              <td><%= student.FirstName %> <%= student.PreferredFirst.present? ? "(#{student.PreferredFirst})" : nil %></td>
+              <td><%= student.MiddleName %></td>
+              <td><%= student.LastName %> <%= student.PrevLast.present? ? "(#{student.PrevLast})" : nil %></td>
+              <td><%= student.ProgStatus %></td>
+              <td class="actions">
+    
+                  <% if can? :show, Student %>
+                    <%= link_to student_path(student.AltID), :class => "btn btn-info action-small" do %>
+                          </br><span class="small-btn-text">Details</span>
+                    <% end %>
+                  <% end  %>
+    
+    
+                    <!-- TODO grayed out button if no praxis results, issues -->
+                    <% if can? :read, PraxisResult %>
+                      <%= link_to student_praxis_results_path(student.AltID),:class => "btn btn-info action-small praxis" + (student.praxis_results.size > 0 ? "" : " disabled") do %>
+                              </br>
+                              <span class="small-btn-text"> Praxis Results 
+                                <span class="badge">
+                                  <%=student.praxis_results.size%> 
+                                </span>
+                            </span>
+    
+                      <% end %>
+                    <% end %>
+    
+                  <% if can? :read, Issue %>
+                    <%= link_to student_issues_path(student.AltID),:class => "btn btn-info action-small issues" do %>
+                          </br><span class="small-btn-text">
+                          Issues
+                            <span class="badge">
+                              <%=student.issues.size%>
+                            </span>
+                          </span>
+    
+                    <% end %>
+                  <% end  %>
+    
+                  <% if can? :read, StudentFile %>
+                    <%= link_to student_student_files_path(student.AltID),:class => "btn btn-info action-small issues" do %>
+                          </br><span class="small-btn-text">
+                          Files
+                            <span class="badge">
+                              <%=student.student_files.active.size%>
+                            </span>
+                          </span>
+    
+                    <% end %>
+                  <% end %>
+    
+    
+              </td>
+            </tr>
+          
+          <% end %>
+        </table>
+      </div> <!--end container -->
 </div>
