cleaned table for issues#index

--- a/app/views/issues/index.html.erb
+++ b/app/views/issues/index.html.erb
@@ -3,90 +3,89 @@
 <% end %>
 
     </br>
+    
+  <div class="container-fluid">
+    <table class="table table-striped">
+      <div class="row">      
+        <caption>
+          <div class="header1 col-xs-12">Issues for <%= name_details(@student)%></div></br>
 
-          <table class="table table-striped">
-            <caption>
-              <div class="header1">Issues for <%= name_details(@student)%></div></br>
-
-              <div class="header2"> <%= pluralize(@issues.size, "issue") + " found" %> </div>
-
-              <div class="container">
-                <div class="row">
-                  <div class="col-md-1 pull-right">
-                    <%= link_to new_student_issue_path(@student.AltID), :class => "btn btn-info glyphicon glyphicon-plus action-large" do %>  
-                        <span class="large-btn-text">New Issue</span>
-                    <% end %>         
-                  </div>
-                </div>
-              </div> 
-            </caption>
-
-            <% if @student.issues.size > 0 %>
-
-              <tr class="header">
-                <th>Issue Name</th>
-                <th>Date Opened</th>
-                <th>Status</th>
-              </tr>
-
-              <% @issues.each do |issue| %>
-
-              <tr>
-                <td> <%= issue.Name %></td>
-                <td> <%= issue.CreateDate.strftime("%m/%d/%Y")%> </td>
-
-                <td class="<%= issue.Open ? "bad_text" : "good_text" %>">
-                  <!-- glyph here if open -->
-                  <% if issue.Open %>
-
-                      <div class="col-md-1">
-                        <span class="glyphicon glyphicon-exclamation-sign"></span>
-                      </div>
-
-                      <div class="col-md-1">
-                        Open
-                      </div>
-
-                  <% else %>
-                      <div class="col-md-1">
-                        <span class="glyphicon glyphicon-ok"></span>
-                      </div>
-
-                      <div class="col-md-1">
-                        Resolved
-                      </div>
-                  <% end #end of status conditional %>
-
-                </td>
-
-                <td class="actions">
-                  <!-- buttons
-                    details
-                    updates
-                    close isue -->
-
-                    <%= render(partial: 'details_popover', 
-                    locals: {
-                      :record_id => issue.IssueID,
-                      :popover_title => "Issue Details", 
-                      :button_title => "Details",
-                      :content => issue.Description
-                    } )  %>
-                              
-                    <%= link_to issue_issue_updates_path(issue.IssueID), class: "btn btn-info action-small" do %>
-                        <span class="small-btn-text"> Updates 
-                          <span class="badge">
-                            <%=issue.issue_updates.size%> 
+          <div class="header2 col-xs-12"> <%= pluralize(@issues.size, "issue") + " found" %> </div>
+            <div class="col-xs-1">
+              <%= link_to new_student_issue_path(@student.AltID), :class => "btn btn-info glyphicon glyphicon-plus action-large" do %>  
+                  <span class="large-btn-text">New Issue</span>
+              <% end %>         
+            </div>
+        </caption>
+      </div>
+  
+              <% if @student.issues.size > 0 %>
+  
+                <tr class="header">
+                  <th>Issue Name</th>
+                  <th>Date Opened</th>
+                  <th>Status</th>
+                </tr>
+  
+                <% @issues.each do |issue| %>
+  
+                <tr>
+                  <td> <%= issue.Name %></td>
+                  <td> <%= issue.CreateDate.strftime("%m/%d/%Y")%> </td>
+  
+                  <td class="<%= issue.Open ? "bad_text" : "good_text" %>">
+                    <!-- glyph here if open -->
+                    <% if issue.Open %>
+  
+                        <div class="col-md-1">
+                          <span class="glyphicon glyphicon-exclamation-sign"></span>
+                        </div>
+  
+                        <div class="col-md-1">
+                          Open
+                        </div>
+  
+                    <% else %>
+                        <div class="col-md-1">
+                          <span class="glyphicon glyphicon-ok"></span>
+                        </div>
+  
+                        <div class="col-md-1">
+                          Resolved
+                        </div>
+                    <% end #end of status conditional %>
+  
+                  </td>
+  
+                  <td class="actions">
+                    <!-- buttons
+                      details
+                      updates
+                      close isue -->
+  
+                      <%= render(partial: 'details_popover', 
+                      locals: {
+                        :record_id => issue.IssueID,
+                        :popover_title => "Issue Details", 
+                        :button_title => "Details",
+                        :content => issue.Description
+                      } )  %>
+                                
+                      <%= link_to issue_issue_updates_path(issue.IssueID), class: "btn btn-info action-small" do %>
+                          <span class="small-btn-text"> Updates 
+                            <span class="badge">
+                              <%=issue.issue_updates.size%> 
+                            </span>
                           </span>
-                        </span>
-                    <% end %>                             
-                      
-                </td>
-              </tr>
-              <% end #end of loop iterating through records %>              
-
-            <% end #end of conditional for table. %>       
-
-          </table>
+                      <% end %>                             
+                        
+                  </td>
+                </tr>
+                <% end #end of loop iterating through records %>              
+  
+              <% end #end of conditional for table. %>       
+  
+        </table>
+    </div>
 
           
