--- a/app/views/student_files/index.html.erb
+++ b/app/views/student_files/index.html.erb
@@ -5,26 +5,22 @@
 <div class="index">
 
   <% if @file %>
-
     <%= error_messages_for(@file)  %>
   <% end  %>
 
-  <table class="listing summary student_files list table table-striped">
+  <div class="container">  
+    <table class="listing summary student_files list table table-striped">
 
-    <caption>        
-        <div class="header1"> <%= name_details(@student, file_as = true) %></div></br>
-        <div class="header2"><%= pluralize(@adm_teps.size + @adm_sts.size + @docs.size, 'file') %>  found </div>
+      <div class="row">    
+        <caption>        
+        <div class="col-xs-12 header1"> <%= name_details(@student, file_as = true) %></div></br>
+        <div class="col-xs-12 header2"><%= pluralize(@adm_teps.size + @adm_sts.size + @docs.size, 'file') %>  found </div>
       
-        <div class="container">
-          <div class="row">
-            <div class="col-md-1 pull-right">
-      		<%= render(partial: 'new') %>
-
-            </div>
-          </div>
-
-      </div>
+        <div class="col-xs-12 pull-right">
+          <%= render(partial: 'new') %>
+        </div>
     </caption>
+  </div>
 
     <% if @adm_teps.size + @adm_sts.size + @docs.size > 0  %>
 
@@ -54,11 +50,11 @@
           </tr>
         <% end %>
 
-      	<% @docs.each do |doc|%>
+        <% @docs.each do |doc|%>
           <tr>
-      			<td><%= link_to(doc.doc_file_name, student_file_download_path(doc.id)) %></td>
-      			<td><%= number_to_human_size doc.doc_file_size %></td>
-      			<td><%= doc.doc_updated_at.strftime("%m/%d/%Y") %></td>
+            <td><%= link_to(doc.doc_file_name, student_file_download_path(doc.id)) %></td>
+            <td><%= number_to_human_size doc.doc_file_size %></td>
+            <td><%= doc.doc_updated_at.strftime("%m/%d/%Y") %></td>
             <td> Miscellaneous </td>
 
           <!-- end of for loop for content-->
@@ -72,10 +68,11 @@
             </td>
 
           </tr>
-  	   <% end %>
+       <% end %>
           
     <!-- end of main loop -->
     <% end %>   
 
-  </table>
+    </table>
+  </div>
 </div>
