--- a/app/views/adm_tep/index.html.erb
+++ b/app/views/adm_tep/index.html.erb
@@ -93,10 +93,10 @@
           <%= link_to("Details", adm_tep_path(app.id), :class => "action details btn btn-info action-small issues")%>
         </td>
 
-        <% if app.letter_file_name %>      
+        <% if app.student_file  %>      
         <td class="doc-download"> 
 
-              <%= link_to app.letter.url, :class => "btn btn-default glyphicon glyphicon-file action-small" do %>
+              <%= link_to adm_tep_download_path(app.id), :class => "btn btn-default glyphicon glyphicon-file action-small" do %>
               <% end %>
 
         </td>
