--- a/app/views/student_files/index.html.erb
+++ b/app/views/student_files/index.html.erb
@@ -14,7 +14,7 @@
       <div class="row">    
         <caption>        
         <div class="col-xs-12 header1"> <%= name_details(@student, file_as = true) %></div></br>
-        <div class="col-xs-12 header2"><%= pluralize(@adm_teps.size + @adm_sts.size + @docs.size, 'file') %>  found </div>
+        <div class="col-xs-12 header2"><%= pluralize(@docs.size, 'file') %>  found </div>
       
         <div class="col-xs-12 pull-right">
           <%= render(partial: 'new') %>
@@ -22,7 +22,7 @@
     </caption>
   </div>
 
-    <% if @adm_teps.size + @adm_sts.size + @docs.size > 0  %>
+    <% if @docs.size > 0  %>
 
           <tr class="header">
             <th>Document Name</th>
@@ -30,25 +30,6 @@
             <th>Updated On</th>
             <th> Type </th>
           </tr>
-
-
-        <% @adm_teps.each do |adm_tep| %>
-          <tr>
-            <td><%= link_to(adm_tep.letter_file_name, adm_tep_download_path(adm_tep.id)) %></td>
-            <td><%= number_to_human_size adm_tep.letter_file_size %></td>
-            <td><%= adm_tep.letter_updated_at.strftime("%m/%d/%Y") %></td>   
-            <td> Admission to TEP</td>       
-          </tr>
-        <% end %>
-
-        <% @adm_sts.each do |adm_st| %>
-          <tr>
-            <td><%= link_to(adm_st.letter_file_name, adm_st_download_path(adm_st.id)) %></td>
-            <td><%= number_to_human_size adm_st.letter_file_size %></td>
-            <td><%= adm_st.letter_updated_at.strftime("%m/%d/%Y") %></td>   
-            <td> Admission to Student Teaching</td>
-          </tr>
-        <% end %>
 
         <% @docs.each do |doc|%>
           <tr>
